@@ -125,8 +125,6 @@ typedef char			int_fast8_t;
 typedef signed char		int_fast8_t;
 #endif
 #endif
-typedef int			int_fast16_t;
-typedef int			int_fast32_t;
 #ifdef	_LP64
 typedef long			int_fast64_t;
 #else	/* _ILP32 */
@@ -136,8 +134,6 @@ typedef long long		int_fast64_t;
 #endif
 
 typedef unsigned char		uint_fast8_t;
-typedef unsigned int		uint_fast16_t;
-typedef unsigned int		uint_fast32_t;
 #ifdef	_LP64
 typedef unsigned long		uint_fast64_t;
 #else	/* _ILP32 */
