@@ -2,6 +2,8 @@
 
 	* cvs rm cmd/dtrace.c: Remove.
 	* uts/common/sys/elftypes.h: Remove.
+	* include/sys/int_types.h: Remove int_fast16_t etc.
+	* include/sys/regset.h: Remove gregset_t delaration.
 
 2010-10-21  Shujing Zhao  <pearly.zhao@oracle.com>
 
